<resources>
    <string name="app_name">Amaze File Utilities</string>
    <string name="app_name_launcher">Amaze Utilities</string>
    <string name="about_app">File Utility app with inbuilt media players for all your needs.</string>
    <string name="team_amaze" translatable="false">Team Amaze</string>
    <string name="image_viewer">Amaze Image Viewer</string>
    <string name="image_viewer_normal">Image Viewer</string>
    <string name="video_player">Amaze Video Player</string>
    <string name="video_player_dialog">Amaze Video Player (Dialog)</string>
    <string name="video_player_full_screen">Amaze Video Player (Full Screen)</string>
    <string name="amaze_audio_player">Amaze Music Player</string>
    <string name="pdf_viewer">Amaze Pdf Viewer</string>
    <string name="epub_viewer">Amaze Epub Viewer</string>
    <string name="docx_viewer">Amaze Doc Viewer</string>
    <string name="intent_image_viewer_dialog">Amaze Image Viewer (Dialog)</string>
    <string name="intent_image_viewer_full_screen">Amaze Image Viewer (Full Screen)</string>
    <string name="grantfailed">Storage permission not granted</string>
    <string name="grant_location_failed">Location permission not granted</string>
    <string name="grant_storage_read_permission">App needs storage read permissions for optimal performance.</string>
    <string name="grant_notification_permission">App needs notification permissions for optimal performance.</string>
    <string name="grant_permission">Grant permission</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="not_allowed">Not allowed</string>
    <string name="audio_player_service_description">Plays audio for Amaze File Utilities</string>
    <string name="invert_colors">Invert colors</string>
    <string name="loading">Loading…</string>
    <string name="title_analyse">Analyse</string>
    <string name="title_utilities">Utilities</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_scan">Scan</string>
    <string name="title_stop_scan">Stop</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="images">Images</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="documents">Documents</string>
    <string name="num_of_files">%s Files</string>
    <string name="num_of_media_files">%s Media Files</string>
    <string name="used_space">Used: %s</string>
    <string name="used_total_space" translatable="false">/ %s</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="stop_receiving">Stop Receiving</string>
    <string name="undetermined" translatable="false">--</string>
    <string name="calculating">Calculating…</string>
    <string name="recent_files">Recent Files</string>
    <string name="no_files">No files</string>
    <string name="media_files_subs">Media Files: %s</string>
    <string name="action_bar_search_hint">Search for files…</string>
    <string name="please_wait">Please wait…</string>
    <string name="its_quiet_here">It\'s quiet in here…</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="rights_reserved">Copyright © 2021–2024 Team Amaze\nAll Rights Reserved</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="licenses">Licenses</string>
    <string name="information">Information</string>
    <string name="unsupported_content">Unsupported content</string>
    <string name="parent">Parent</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="size">Size</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="duration">Duration</string>
    <string name="sorry_string">Sorry, that should not have happened.</string>
    <string name="guru_meditation" translatable="false">Guru Meditation.</string>
    <string name="error_report_button_text">Report this error via e-mail</string>
    <string name="error_report_button_telegram">Report this error via telegram</string>
    <string name="copy_for_github">Copy formatted report</string>
    <string name="error_report_open_issue_button_text">Report on GitHub</string>
    <string name="error_report_open_github_notice">Please check whether an issue discussing your crash already exists.</string>
    <string name="error_snackbar_message">Sorry, something went wrong.</string>
    <string name="error_snackbar_action">Report</string>
    <string name="what_device_headline">Info:</string>
    <string name="what_happened_headline">What happened:</string>
    <string name="info_labels">What:\\nRequest:\\nGMT Time:\\nPackage:\\nVersion:\\nOS version:\\nDevice:\\nModel:\\nProduct:\\nDevice ID:</string>
    <string name="your_comment">Your comment (in English):</string>
    <string name="error_details_headline">Details:</string>
    <string name="app_ui_crash">App/UI crashed</string>
    <string name="error_report_title">Error report</string>
    <string name="crash_report_copied">Crash report copied to clipboard</string>
    <string name="clipboard_path_copy">Path copied to clipboard</string>
    <string name="pdf_password_title">Password required</string>
    <string name="pdf_password_required">Please enter the password to open this document</string>
    <string name="ok">OK</string>
    <string name="wrong_password">Wrong password</string>
    <string name="unsupported_operation">Unsupported Operation</string>
    <string name="grant_all_files_permission"><html><body>Since Android 11, Google requests File Managers to request user permission for managing all files on the device. Details <a href="https://developer.android.com/training/data-storage/manage-all-files" target="_blank">here</a>.
        \n\nAmaze File Utilities needs this permission too. After pressing &quot;Grant&quot;here, please select <b>Allow access to manage all files</b> option on the next screen.
        \n\n<font color='#ff6347'><i>Canceling this dialog will exit the app.</i></font></body></html></string>
    <string name="copy_page">Copy page</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="creator">Creator</string>
    <string name="creation_date">Creation date</string>
    <string name="modification_date">Modification Date</string>
    <string name="subject">Subject</string>
    <string name="keywords">Keywords</string>
    <string name="producer">Producer</string>
    <string name="close">Close</string>
    <string name="analysing">Analysing…</string>
    <string name="page_copied_to_clipboard">Page content copied to clipboard</string>
    <string name="clean">Clean</string>
    <string name="blurred_pics">Blurred</string>
    <string name="low_light">Low-Light</string>
    <string name="memes">Memes</string>
    <string name="frown">Frown</string>
    <string name="frown_hint">Images that doesn\'t have smiling faces</string>
    <string name="closed_eyes">Closed Eyes</string>
    <string name="closed_eyes_hint">Images that have people with closed eyes</string>
    <string name="distracted">Distracted</string>
    <string name="distracted_hint">Images that have people looking elsewhere</string>
    <string name="selfie">Selfies</string>
    <string name="group_pics">Group Pics</string>
    <string name="memes_hint">Memes are images that have something prominent written over them</string>
    <string name="duplicates">Duplicate files</string>
    <string name="old_screenshots">Old Screenshots</string>
    <string name="old_recordings">Old recordings</string>
    <string name="telegram_files">Telegram Media</string>
    <string name="analysis">Analysis</string>
    <string name="analysis_hint">Control analysis tab settings such as paths to include analysis from, show / hide various analysis</string>
    <string name="exclusions">Exclusions</string>
    <string name="exclusions_summary">Paths to exclude while scanning media</string>
    <string name="audio_player">Audio Player</string>
    <string name="audio_player_hint">Control audio player settings such as paths to exclude</string>
    <string name="image_viewer_hint">Control image viewer settings</string>
    <string name="search_duplicates">Search duplicates in…</string>
    <string name="paths_included">Paths Included</string>
    <string name="image_features">Image Features</string>
    <string name="features_paths_hint">Includes closed eyes, selfie, group paths</string>
    <string name="download_paths">Downloads</string>
    <string name="download_paths_hint">Includes old, large downloads</string>
    <string name="searching">Searching…</string>
    <string name="enable_waveform">Enable waveform seekbar</string>
    <string name="enable">Enable</string>
    <string name="disconnect">Disconnect</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="pitch_speed">Pitch (semitones)</string>
    <string name="made_in_india">Made with ❤ in India</string>
    <string name="general">General</string>
    <string name="pitch_hint_text">A value of zero means that the key is not changed.\nOne full step corresponds to one semitone.\nA change of -12 semitones means that the song is played one octave lower.</string>
    <string name="audio_player_enable_palette">Extract palette color from album</string>
    <string name="audio_player_enable_palette_summary">Sets background color for audio player</string>
    <string name="unused_apps">Unused apps</string>
    <string name="most_used_apps">Most used apps</string>
    <string name="least_used_apps">Least used apps</string>
    <string name="unused_apps_pref_message">Number of days an app\'s not been opened</string>
    <string name="most_used_apps_pref_message">Apps most used in last number of days</string>
    <string name="least_used_apps_pref_message">Apps least used in last number of days</string>
    <string name="remove_battery_optimizations">Remove battery optimizations</string>
    <string name="remove_battery_optimizations_hint">Please remove battery optimizations for music player to function properly in background</string>
    <string name="whatsapp_media">Whatsapp Media</string>
    <string name="newly_installed_apps">Newly installed apps</string>
    <string name="newly_installed_apps_summary">Apps newly installed (in days)</string>
    <string name="recently_updated_apps">Recently updated apps</string>
    <string name="recently_updated_apps_summary">Apps recently updated (in days)</string>
    <string name="large_size_diff_apps">Growing apps</string>
    <string name="large_size_diff_apps_summary">Apps with large size increase in the last number of days</string>
    <string name="similar_images">Similar Images</string>
    <string name="similar_images_hint">Images that have similar colors</string>
    <string name="trash_bin">Trash Bin</string>
    <string name="trash_bin_summary">Control configuration to auto-clean deleted files in trash bin</string>
    <string name="compress_message">You\'re about to compress these files.
        Are you sure you want to proceed?\n\n%s Files, %s Size\n\n</string>
    <string name="compression_quality_title">Quality</string>
    <string name="compression_delete_original">Delete original</string>
    <string name="compress_disable_audio">Disable audio</string>
    <string name="general_summary">Control general app behaviour</string>
</resources>