<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="search_duplicates"
        app:title="@string/search_duplicates" />
    <Preference
        android:summary="@string/unused_apps_pref_message"
        app:key="unused_apps"
        app:title="@string/unused_apps" />
    <Preference
        android:summary="@string/most_used_apps_pref_message"
        app:key="most_used_apps"
        app:title="@string/most_used_apps" />
    <Preference
        android:summary="@string/least_used_apps_pref_message"
        app:key="least_used_apps"
        app:title="@string/least_used_apps" />
    <Preference
        android:summary="@string/newly_installed_apps_summary"
        app:key="newly_installed_apps"
        app:title="@string/newly_installed_apps" />
    <Preference
        android:summary="@string/recently_updated_apps_summary"
        app:key="recently_updated_apps"
        app:title="@string/recently_updated_apps" />
    <Preference
        android:summary="@string/large_size_diff_apps_summary"
        app:key="large_size_diff_apps"
        app:title="@string/large_size_diff_apps" />
    <PreferenceCategory app:title="@string/paths_included">
        <Preference
            app:key="meme_paths"
            app:title="@string/memes" />
        <Preference
            app:key="blur_paths"
            app:title="@string/blurred_pics" />
        <Preference
            app:key="low_light_paths"
            app:title="@string/low_light" />
        <Preference
            android:title="@string/image_features"
            app:key="features_paths"
            app:summary="@string/features_paths_hint" />
        <Preference
            android:title="@string/similar_images"
            app:key="features_similar_images"
            app:summary="@string/similar_images_hint" />
        <Preference
            android:summary="@string/download_paths_hint"
            app:key="download_paths"
            app:title="@string/download_paths" />
        <Preference
            app:key="recording_paths"
            app:title="@string/old_recordings" />
        <Preference
            app:key="screenshot_paths"
            app:title="@string/old_screenshots" />
        <Preference
            app:key="whatsapp_media"
            app:title="@string/whatsapp_media" />
        <Preference
            app:key="telegram_paths"
            app:title="@string/telegram_files" />
    </PreferenceCategory>
</PreferenceScreen>