<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/material_generic"
    android:paddingRight="@dimen/material_generic"
    tools:context=".home_page.ui.transfer.TransferFragment">


    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searching"
        android:textColor="@color/white"
        android:textSize="@dimen/eight_sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_generic_medium"
        android:text="@string/searching"
        android:textColor="@color/white"
        android:textSize="@dimen/eight_sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/searching_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searching"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enable_location_button"
        style="@style/MaterialButton.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:visibility="gone"
        app:cornerRadius="@dimen/material_generic"
        app:rippleColor="@color/highlight_yellow" />

    <ProgressBar
        android:id="@+id/searching_progress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/grid_view"
        android:indeterminate="true"
        android:visibility="gone" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/material_generic"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/devices_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/send_receive_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_button"
                style="@style/MaterialButton.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                app:cornerRadius="@dimen/material_generic"
                app:rippleColor="@color/highlight_yellow" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/receive_button"
                style="@style/MaterialButton.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_generic"
                android:text="@string/receive"
                app:cornerRadius="@dimen/material_generic"
                app:elevation="@dimen/material_generic"
                app:rippleColor="@color/highlight_yellow" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/receive_stop_button"
            style="@style/MaterialButton.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_receiving"
            android:visibility="gone"
            app:cornerRadius="@dimen/material_generic"
            app:elevation="@dimen/material_generic"
            app:rippleColor="@color/highlight_yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/disconnect_button"
            style="@style/MaterialButton.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_generic"
            android:text="@string/disconnect"
            app:cornerRadius="@dimen/material_generic"
            app:elevation="@dimen/material_generic"
            app:rippleColor="@color/highlight_yellow" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scan_button"
        style="@style/MaterialButton.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_scan"
        app:cornerRadius="@dimen/material_generic"
        app:elevation="@dimen/material_generic"
        app:rippleColor="@color/highlight_yellow" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop_scan_button"
        style="@style/MaterialButton.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_stop_scan"
        android:visibility="gone"
        app:cornerRadius="@dimen/material_generic"
        app:elevation="@dimen/material_generic"
        app:rippleColor="@color/highlight_yellow" />

    <LinearLayout
        android:id="@+id/transfer_info_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/transfer_file_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching"
            android:textColor="@color/white"
            android:textSize="@dimen/twelve_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transfer_bytes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching"
            android:textColor="@color/white"
            android:textSize="@dimen/twelve_sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/transfer_progress"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_generic"
                android:layout_weight="0.8"
                android:indeterminate="false"
                app:indicatorColor="@color/highlight_yellow"
                app:indicatorDirectionLinear="leftToRight"
                app:trackColor="@color/white_grey_1"
                app:trackCornerRadius="@dimen/two_dp" />

            <ImageView
                android:id="@+id/transfer_cancel"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_weight="0.2"
                android:src="@drawable/ic_round_close_32"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>