<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/eight_dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_generic"
        android:layout_marginBottom="@dimen/material_generic"
        android:text="@string/playback_speed"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/playback_speed_slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/eight_dp"
        app:haloColor="@color/yellow"
        app:labelBehavior="gone"
        app:thumbColor="@color/yellow_dark"
        app:thumbStrokeColor="@color/highlight_yellow_50"
        app:tickColor="@color/navy_blue_alt"
        app:trackColor="@color/yellow_dark" />

    <TextView
        android:id="@+id/playback_speed_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_generic"
        android:text="1.0"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_generic"
            android:layout_marginBottom="@dimen/material_generic"
            android:text="@string/pitch_speed"
            android:textColor="@color/white"
            android:textSize="@dimen/eighteen_sp" />

        <ImageView
            android:id="@+id/pitch_hint"
            android:layout_width="@dimen/material_generic"
            android:layout_height="@dimen/material_generic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/eight_dp"
            android:src="@drawable/ic_outline_info_32" />
    </LinearLayout>

    <TextView
        android:id="@+id/pitch_hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:gravity="center_horizontal"
        android:text="@string/pitch_hint_text"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_dp"
        android:visibility="gone" />

    <com.google.android.material.slider.Slider
        android:id="@+id/pitch_slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/eight_dp"
        app:haloColor="@color/yellow"
        app:labelBehavior="gone"
        app:thumbColor="@color/yellow_dark"
        app:thumbStrokeColor="@color/highlight_yellow_50"
        app:tickColor="@color/navy_blue_alt"
        app:trackColor="@color/yellow_dark" />

    <TextView
        android:id="@+id/pitch_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/material_generic"
        android:text="1.0"
        android:textColor="@color/white"
        android:textSize="@dimen/eighteen_sp" />
</LinearLayout>