<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/material_generic">

    <ImageView
        android:id="@+id/launcher_icon"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/minimal_icon_size"
        android:layout_marginTop="@dimen/material_generic"
        android:src="@mipmap/ic_launcher_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_amaze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:text="@string/team_amaze"
        android:textColor="@color/grey_color"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launcher_icon"
        app:layout_goneMarginTop="@dimen/eight_dp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:textColor="@color/grey_color"
        android:textSize="@dimen/eighteen_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_amaze"
        app:layout_goneMarginTop="@dimen/eight_dp" />

    <TextView
        android:id="@+id/rights_reserved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:text="@string/rights_reserved"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/version"
        app:layout_goneMarginTop="@dimen/eight_dp" />

    <TextView
        android:id="@+id/home_screen_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_dp"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rights_reserved"
        app:layout_goneMarginTop="@dimen/eight_dp" />

    <!--<TextView
        android:id="@+id/preprod_copy"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rights_reserved"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/material_generic"
        android:textSize="@dimen/twelve_sp"
        android:text="@string/pre_production"
        />-->

    <TextView
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_generic_medium"
        android:gravity="center_horizontal"
        android:text="@string/made_in_india"
        android:textColor="@color/white"
        android:textSize="@dimen/twelve_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_screen_design" />
</androidx.constraintlayout.widget.ConstraintLayout>